2000-03-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * clisp-link.in (create-module-set): Remove generation of variables
          wfiles_o and wfile_list.

2000-03-21  Sam Steingold  <sds@gnu.org>

	* inspect.lsp: use a vector instead of a hash for inspected
	objects.
	* clhs.lsp (*browsers*): support more browsers
	* makemake.in: fixed installation of clhs.txt

2000-03-20  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/Makefile.in:
	(CLISP): call clisp with '-norc -q'
	(clx.d): `e2d' bug workaround: remove ^e_$

2000-03-19  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * autoconf/aclocal.m4 (CL_STRERROR): New macro.
        * configure.in: Call it.
        * unixconf.h.in (HAVE_STRERROR): New macro.
        * unix.d (strerror): New declaration.
        * lispbibl.d (init_errormsg_table): Remove declaration.
        * errunix.d (sys_nerr, sys_errlist): Don't declare if HAVE_STRERROR.
          (strerror) [!HAVE_STRERROR]: New function.
          (errormsg_table): Remove variable.
          (init_errormsg_table): Remove function.
          (get_errormsg): New function.
          (OS_error_internal, errno_out): Use get_errormsg instead of
          errormsg_table.
        * spvw.d (main): Don't call init_errormsg_table.

2000-03-14  Sam Steingold  <sds@gnu.org>

	Integrated inspect
	* inspect.lsp: new file
	* init.lsp: load inspect
	* makemake.in (LPARTS): added inspect

2000-03-13  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * lispbibl.d: Add BeOS support.
          Based on patch by Alexis Rivera Rios <ahrivera@yahoo.com>.
        * unix.d: Likewise.

        * autoconf/aclocal.m4 (CL_READLINK): Check the return type as well;
          it may be 'int' or 'ssize_t'. Define RETREADLINKTYPE.
        * unixconf.h.in (RETREADLINKTYPE): New macro.
        * unix.d (readlink): Use it.

        * autoconf/aclocal.m4 (CL_GETHOSTNAME): Try 'unsigned int' as well.
