@@ -1,3 +1,7 @@
+2000-03-28  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
+
+        * clisp-link.in: Always pass "-norc" flag to lisp.run.
+
 2000-03-23  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
 
         * clisp-link.in (create-module-set): Remove generation of variables
